<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ForecastFragment">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@+id/frameLayout"
        app:layout_anchorGravity="center">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft = "10dp"
        android:layout_marginRight = "10dp"
        android:layout_marginBottom = "10dp"
        android:background="@color/blue"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- MONDAY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/paddingVertical">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/Monday"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingStart"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:src="@drawable/cloud"
                android:contentDescription="@string/cloud_description"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/Cloud"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingEnd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/temp_24_31"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- TUESDAY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/paddingVertical">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/Tuesday"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingStart"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:src="@drawable/cloud"
                android:contentDescription="@string/Cloud"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingEnd"
                android:text="@string/Cloud"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/temp_24_31"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- WEDNESDAY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/paddingVertical">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/Wednesday"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingStart"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:src="@drawable/cloud"
                android:contentDescription="@string/cloud_description"/>


            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/Cloud"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingEnd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/temp_22_23"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Thursday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/paddingVertical">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/Thursday"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingStart"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:src="@drawable/cloud"
                android:contentDescription="@string/cloud_description"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/Cloud"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingEnd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/temp_22_27"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Friday -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/paddingVertical">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/Friday"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingStart"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:src="@drawable/cloud"
                android:contentDescription="@string/cloud_description"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/Cloud"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingEnd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/temp_22_30"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- SATURDAY -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/paddingVertical">

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:text="@string/Saturday"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingStart"
                android:textSize="18sp"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="24dp"
                android:src="@drawable/cloud"
                android:contentDescription="@string/cloud_description"/>

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/Cloud"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:paddingStart="@dimen/paddingStart"
                android:paddingEnd="@dimen/paddingEnd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/temp_24_31"
                android:textSize="18sp"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


